.um.mutant_output19041
Picked up JAVA_TOOL_OPTIONS: -Duser.language=en
/Users/rainyd4y/projects/SAMutator/seeds/PMD_Validation/bestpractices_PreserveStackTrace/PreserveStackTrace18.java:20: error: class, interface, enum, or record expected
continue;
^
1 error
